fix table name overflow in side panel

--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,8 @@
         @apply transition-[width];
         @apply duration-100;
     }
+
+    .scrollable-flex > div {
+        @apply !flex;
+    }
 }
